# Multisig_Wallet

./: .gitignore  README.md
anchor/: .multisig-address.json  Anchor.toml  Cargo.toml  package-lock.json  package.json  solana-wallet-keypair.json
anchor/programs/true_wallet_multisig/: Cargo.toml
anchor/programs/true_wallet_multisig/src/: lib.rs
anchor/scripts/: init_multisig.js  list_proposals.js
anchor/tests/: true_wallet_multisig.ts
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/assets/idl/: true_wallet_multisig.json
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/core/config/: app_config.dart  config_controller.dart
app/lib/core/router/: app_router.dart
app/lib/core/theme/: app_colors.dart  app_spacing.dart  app_theme.dart  app_typography.dart
app/lib/domain/entities/: proposal.dart  proposal_action.dart  wallet_account.dart
app/lib/presentation/biometric/: biometric_lock_screen.dart
app/lib/presentation/home/: home_page.dart
app/lib/services/: biometric_auth_service.dart  multisig_client.dart  multisig_providers.dart  proposal_providers.dart  proposal_service.dart  secure_storage_service.dart  solana_providers.dart  solana_rpc_service.dart  wallet_controller.dart  wallet_service.dart
app/linux/: CMakeLists.txt
app/linux/runner/: my_application.cc
app/macos/Runner.xcodeproj/: project.pbxproj
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp
scripts/: init_multisig.ts
(+18 files in other folders)
